# career-crisis-env

./: BLOG.md  Dockerfile  README.md  client.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
.github/workflows/: sync_to_hf.yml
env/: __init__.py  environment.py  models.py  rewards.py  scenarios.py
server/: app.py
server/static/: index.html
